--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -59,3 +59,9 @@ form label {
   font-weight: bold;
   color: maroon;
 }
+.yell {
+  background: yellow;
+}
+table#movies th.hilite {
+  background-color: yellow;
+}
