--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,17 +1,22 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
-
+= form_tag movies_path, :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]"
+  = submit_tag 'Refresh'
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th= link_to 'Title', movies_path({:order => 'title'}), class: ('yell' if @order.eql?("title"))
       %th Rating
-      %th Release Date
+      %th= link_to 'Release Date', movies_path({:order => 'release_date'}), class: ("yell" if @order.eql?("release_date"))
       %th More Info
-  %tbody
+    %tbody
     - @movies.each do |movie|
       %tr
-        %td= movie.title 
+        %td= movie.title
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
