--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,8 +5,8 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag("ratings[#{rating}]" ,1, if  @filt.include?(rating) then true else false end)
-
+    = #check_box_tag("ratings[#{rating}]" ,1, if  @filt.include?(rating) then true else false end)
+    = filt: @filt
   = submit_tag 'Refresh'
 
 %table#movies
