--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -8,8 +8,7 @@
     = #check_box_tag("ratings[#{rating}]" ,1, if  @filt.include?(rating) then true else false end)
 
   = submit_tag 'Refresh'
-  = puts("filt: #{@filt}")
-  = puts("La gusanera me come")
+
 
 %table#movies
   %thead
@@ -27,3 +26,5 @@
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
+%p
+  = @filt
