--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -28,4 +28,4 @@
 = link_to 'Add new movie', new_movie_path
 %p
   En seguida el modelo Movie.all:
-  = SELECT "movies".* FROM "movies"
+  = Movie.all
