--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -8,6 +8,8 @@
     = #check_box_tag("ratings[#{rating}]" ,1, if  @filt.include?(rating) then true else false end)
 
   = submit_tag 'Refresh'
+  @all_ratings:
+  = @all_ratings
 
 
 %table#movies
